--- a/manifest.json
+++ b/manifest.json
@@ -16,12 +16,17 @@
             ],
             "js": [
                 "src/content_script.ts"
-            ]
+            ],
+            "run_at": "document_start"
         }
     ],
     "permissions": [
         "storage",
         "activeTab",
-        "scripting"
+        "scripting",
+        "tabs"
+    ],
+    "host_permissions": [
+        "https://twitter.com/*"
     ]
 }
